Fixed movie poster growing issue

--- a/couchpotato/core/media/movie/_base/static/movie.scss
+++ b/couchpotato/core/media/movie/_base/static/movie.scss
@@ -365,7 +365,7 @@ $mass_edit_height: 44px;
 		margin-bottom: $padding;
 		position: relative;
 		cursor: pointer;
-		flex: 1 auto;
+		flex: 0 1 auto;
 		width: 150px;
 		max-width: 16.666666667%;
 		border: 0 solid transparent;
